force-app/main/default/objects/vlocity_ps__Episode__c/vlocity_ps__Episode__c.object-meta.xml
<CustomObject>
    <label>Child Removal Episode</label>
    <nameField>
        <label>Child Removal Episode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Removal Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>