force-app/main/default/objects/vlocity_ps__Episode__c/fields/vlocity_ps__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Child Removal Episodes</relationshipLabel>
    <relationshipName>ChildRemovalEpisodeContacts</relationshipName>
    <type>Lookup</type>
</CustomField>