force-app/main/default/objects/vlocity_ps__Episode__c/fields/vlocity_ps__LivingWithParentsLastDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__LivingWithParentsLastDate__c</fullName>
    <label>Last Date Living with Parents</label>
    <type>Date</type>
</CustomField>