force-app/main/default/objects/vlocity_ps__Episode__c/fields/vlocity_ps__OngoingCaseId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OngoingCaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ongoing Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Child Removal Episodes</relationshipLabel>
    <relationshipName>ChildRemovalEpisodeOngoingCases</relationshipName>
    <type>Lookup</type>
</CustomField>