force-app/main/default/objects/vlocity_ps__Episode__c/fields/vlocity_ps__RemovalEpisodeFrom__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RemovalEpisodeFrom__c</fullName>
    <label>Removal Episode From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Removed from Home (Parents)</fullName>
            </value>
            <value>
                <fullName>Specified Relative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>