force-app/main/default/objects/vlocity_ps__Episode__c/fields/vlocity_ps__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__StartDateTime__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>