force-app/main/default/objects/vlocity_ps__Episode__c/fields/vlocity_ps__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Type__c</fullName>
    <label>Removal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Emergency Removal</fullName>
            </value>
            <value>
                <fullName>Courted Ordered</fullName>
            </value>
            <value>
                <fullName>Not Yet Determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>